--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -1,6 +1,9 @@
 name: name_workflow
 on: workflow_dispatch
 
-steps:
-  - name: usar action
-    uses: .github/actions/action.yaml
+jobs:
+  teste:
+    runs_on: ubuntu-latest
+    steps:
+      - name: usar action
+        uses: .github/actions/action.yaml
