--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -6,4 +6,4 @@ jobs:
     runs_on: ubuntu-latest
     steps:
       - name: usar action
-        uses: .github/actions/action.yaml
+        uses: .github/actions
