--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -5,5 +5,7 @@ jobs:
   teste:
     runs_on: ubuntu-latest
     steps:
+      - name: pegar o codigo
+        uses: actions/checkout@v4
       - name: usar action
         uses: .github/actions
