--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -8,4 +8,4 @@ jobs:
       - name: pegar o codigo
         uses: actions/checkout@v4
       - name: usar action
-        uses: .github/actions
+        uses: ./.github/actions/
