adding keyword inputs

--- a/.github/actions/echo/action.yaml
+++ b/.github/actions/echo/action.yaml
@@ -18,7 +18,7 @@ runs:
     - name: echo
       if: ${{ nome != 'indigente' }}
       shell: bash
-      run: echo ${{ nome }}
+      run: echo ${{ inputs.nome }}
     # - name: NAME_STEP
     #   if: EXPRESSAO
     #   var:
