--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -30,11 +30,11 @@ jobs:
           echo ${{inputs.teste}}
       - name: teste_if
         run: |
-          if ${{inputs.nome}} == "gabriel"}}; then
+          if "${{inputs.nome}}" == "gabriel"}}; then
             export NOME_VAR=${{env.testando}}
             echo $NOME_VAR
 
-          elif [ ${{inputs.nome}} == "pedro"}} ] && [ ${{inputs.choice}} == "doi"* ] ; then
+          elif [ "${{inputs.nome}}" == "pedro"}} ] && [ ${{inputs.choice}} == "doi"* ] ; then
             export NOME_VAR=${{env.testando}}
             echo $NOME_VAR
 
