--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -33,10 +33,12 @@ jobs:
           if [[ "${{inputs.nome}}" == "gabriel" ]]; then
             export NOME_VAR=${{env.testando}}
             echo $NOME_VAR
+            echo 'foi no if'
 
           elif [ "${{inputs.nome}}" == "pedro" ] && [ ${{inputs.choice}} == "doi"* ] ; then
             export NOME_VAR=${{env.testando}}
             echo $NOME_VAR
+            echo 'foi no elif'
 
           else
             echo "Caiu no else"
