--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -34,7 +34,7 @@ jobs:
             export NOME_VAR=${{env.testando}}
             echo $NOME_VAR
             echo 'foi no if'
-          elif [[ ${{inputs.nome}} == "pedro" ]] && [[ ${{inputs.choice}} == "doi"* ]]; then
+          elif [[ ${{inputs.nome}} == "pedro" ]] && [[ ${{inputs.teste}} == "doi"* ]]; then
             export NOME_VAR=${{env.testando}}
             echo $NOME_VAR
             echo 'foi no elif'
