--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: pegar o codigo
         uses: actions/checkout@v4
       - name: usar action
+        if: ${{inputs.nome}} == "gabriel"
         uses: ./.github/actions/echo/
         with:
           nome: ${{inputs.nome}}
