--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -47,3 +47,7 @@ jobs:
           PASSWORD=$(jq -r '.inputs.nome' $GITHUB_EVENT_PATH)
           echo PASSWORD=$PASSWORD >> $GITHUB_ENV
           echo ${{env.PASSWORD}}
+
+          if [[ ${{env.PASSWORD}} == "gabriel" ]]; then
+            echo 'sim'
+          fi
