--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -46,8 +46,5 @@ jobs:
         run: |
           PASSWORD=$(jq -r '.inputs.nome' $GITHUB_EVENT_PATH)
           echo "PASSWORD=$PASSWORD" >> $GITHUB_ENV
-          echo ${{env.PASSWORD}}
-
-          if [[ ${{env.PASSWORD}} == "gabriel" ]]; then
-            echo 'sim'
-          fi
+      - name: verificar
+        run: echo ${{ env.PASSWORD }}
