--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -46,13 +46,13 @@ jobs:
         run: |
           if [[ ${{inputs.nome}} =~ "gabriel" ]]; then
               ${{inputs.nome}}="teste"
-              export testando=teste
+              export vamosver=teste
               echo 'caiu no if!'
           fi
       - name: print nome
         run: |
           echo ${{inputs.nome}}
-          echo $testando
+          echo $vamosver
       - name: mascarar senha
         run: |
           PASSWORD=$(jq -r '.inputs.nome' $GITHUB_EVENT_PATH)
