--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -19,8 +19,8 @@ jobs:
       testando: funciona
     runs-on: ubuntu-latest
     steps:
-      # - name: pegar o codigo
-      #   uses: actions/checkout@v4
+      - name: pegar o codigo
+        uses: actions/checkout@v4
       - name: usar action
         if: "${{ github.event.inputs.nome == 'gabriel' }}"
         uses: ./.github/actions/echo/
