--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -26,6 +26,9 @@ jobs:
           nome: ${{inputs.nome}}
       - name: validação
         env:
-          nomes: [João, Pedro, Joaquim]
+          nomes: |
+            João
+            Pedro
+            Joaquim
         run: |
           echo ${{ env.nomes }}
