--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -31,4 +31,7 @@ jobs:
             Pedro
             Joaquim
         run: |
+          for item in ${{ env.nomes }}; do
+            echo $item
+          done
           echo ${{ env.nomes }}
