--- a/.github/workflows/show_name.yaml
+++ b/.github/workflows/show_name.yaml
@@ -26,7 +26,7 @@ jobs:
           nome: ${{inputs.nome}}
       - name: validação
         env:
-          nomes: ('João', 'Pedro', 'Joaquim')
+          nomes: ('João' 'Pedro' 'Joaquim')
         run: |
           for item in ${{ env.nomes }}; do
             echo $item
